--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -1,5 +1,36 @@
 # 第 1.2 节 关于 FreeBSD 项目
 
+## FreeBSD 项目宗旨
+
+FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的使命：使 FreeBSD 的代码得到最大程度的利用，让所有人——无论其目的为何——都能从中受益。简而言之，“只求我为人人，不求人人为我”，这正是我们热情拥护的宗旨。
+
+在 FreeBSD 项目的源代码中包含部分以 GNU 通用公共许可证（GPL）和 GNU 宽通用公共许可证（LGPL）授权的软件，我们持续努力减少其比重。尽管这些许可证要求开源，而非闭源，但它们仍带来一定的法律挑战和额外的复杂性。为了更好地实现 FreeBSD 的宗旨，尽可能提供无附加条件的软件，从而减少在商业使用中的复杂性，FreeBSD 项目在可能的情况下，更倾向于采用限制更少的 BSD 许可证。
+
+## FreeBSD 开发模型
+
+### 存储库
+
+FreeBSD 项目历史悠久，其使用的版本控制工具历经了 CVS、SVN、Git。目前使用 Git 进行协作开发。
+
+FreeBSD 项目的存储库分为三个：freebsd src（源代码）、freebsd ports（Port 软件移植）、freebsd doc（文档）。三个项目地位相等。
+
+### FreeBSD 基金会
+
+FreeBSD 商标由 FreeBSD 基金会持有。FreeBSD 基金会是美国科罗拉多州的一家 501(c)3 非营利机构，负责接收捐赠，支持项目开发，充当 FreeBSD 项目法律实体，会议赞助，宣传和推广 FreeBSD 项目。基金会的所有权力集中在董事会，董事由现有董事会成员选举产生（新董事仅限现任董事提名），每位董事人数任期 1 年，可连选连任。
+
+### FreeBSD 社区
+
+FreeBSD 社区由来自全世界各地的开发者和用户构成。FreeBSD 社区并不是一个法律实体。
+
+### 提交者
+
+提交者是那些有权力直接写入 FreeBSD 存储库的人。要想成为提交者，须经过导师机制，必须由已有提交者推荐。为了防范潜在的安全风险，提交者并非终身制：对于 freebsd src 和 freebsd doc，提交者在 18 个月应有一次提交；对于 freebsd ports 则是 12 个月。
+
+### FreeBSD 核心小组
+
+FreeBSD 核心小组是 FreeBSD 项目的最高权力机关，共计 9 人，每位成员分管不同的子项目。FreeBSD 核心小组负责授予或撤销提交者权限及账户、执行冲突守则（CoC）、管理项目子团队等。FreeBSD 核心小组选举每两年举行一次，可以连选连任。只有在过去一年内有过提交的提交者（成为活跃开发者）才有资格投票参见选举，被选举者也必须是提交者。活跃开发者可以表决罢免 FreeBSD 核心小组成员。
+
+FreeBSD 核心小组成员并不直接从中获取任何利益，同样也都是志愿者。
 
 ## FreeBSD 简史
 
