--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -16,13 +16,15 @@ FreeBSD 项目的存储库分为三个：freebsd src（源代码）、freebsd po
 
 ### FreeBSD 基金会
 
-FreeBSD 基金会是美国科罗拉多州的一家 501(c)3 非营利机构，负责接收捐赠，支持项目开发，充当 FreeBSD 项目法律实体，会议赞助，宣传和推广 FreeBSD 项目。基金会的所有权力集中在董事会，董事由现有董事会成员选举产生（新董事仅限现任董事提名），每位董事任期 1 年，可连选连任。
+FreeBSD 基金会是美国科罗拉多州博尔德县的一家 501(c)3 非营利机构，负责接收捐赠，支持项目开发，充当 FreeBSD 项目法律实体，会议赞助，宣传和推广 FreeBSD 项目。基金会的所有权力集中在董事会，董事由现有董事会成员选举产生（新董事仅限现任董事提名），每位董事任期 1 年，可连选连任。
 
-FreeBSD 商标由 FreeBSD 基金会持有。
+在大部分国家，FreeBSD 商标都由 FreeBSD 基金会持有。
 
 ### FreeBSD 社区
 
-FreeBSD 社区由来自全世界各地的开发者和用户构成。FreeBSD 社区并不是一个法律实体。FreeBSD 社区不仅仅是英文世界的声音，我们还有中文社区、俄语社区、韩语社区、日语社区等。
+FreeBSD 项目通过网络远程开发。
+
+FreeBSD 社区由来自全世界各地的开发者和用户构成。FreeBSD 社区并不是一个法律实体，也无固定办事处。FreeBSD 社区不仅仅是英文世界的声音，我们还有中文社区、俄语社区、韩语社区、日语社区等。
 
 ### 提交者
 
