--- a/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
@@ -1,5 +1,16 @@
 # 第 2.1 节 安装前准备
 
+## 最低硬件要求
+
+针对 AMD64 架构，14.2-RELEASE 在物理机上测得：
+
+- 硬盘：
+  - 仅基本系统（安装后）：550MB
+  - KDE 桌面（pkg 安装后）：15G
+- 内存：
+  - UEFI 下，最小内存为 128N
+  - BIOS 下，最小内存为 64M
+
 ## FreeBSD 版本介绍
 
 已知 FreeBSD 有如下版本（或阶段）：alpha、rc、beta、release、current、stable。
