--- a/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
@@ -8,7 +8,7 @@
   - 仅基本系统（安装后）：550MB
   - KDE 桌面（pkg 安装后）：15G
 - 内存：
-  - UEFI 下，最小内存为 128N
+  - UEFI 下，最小内存为 128M
   - BIOS 下，最小内存为 64M
 
 ## FreeBSD 版本介绍
