--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -8,6 +8,57 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 
 ## FreeBSD 开发模型
 
+```
+┌────────────────────┐
+                          │  FreeBSD 基金会     │
+                          │ 法律实体 / 捐赠 / 推广 │
+                          └────────┬───────────┘
+                                   │
+               商标持有            ▼
+                          ┌────────────────────┐
+                          │   FreeBSD 项目总览   │
+                          └────────┬───────────┘
+                                   │
+      ┌───────────────────────────┼────────────────────────────┐
+      │                           │                            │
+      ▼                           ▼                            ▼
+┌──────────────┐       ┌────────────────┐             ┌─────────────────┐
+│ freebsd src  │       │ freebsd ports  │             │  freebsd doc     │
+│ 源代码仓库   │       │ Ports 仓库     │             │ 文档仓库         │
+└──────┬───────┘       └──────┬─────────┘             └──────┬──────────┘
+       │                      │                                │
+       ▼                      ▼                                ▼
+┌──────────────┐     ┌────────────────┐              ┌────────────────────┐
+│  提交者（committers） │◄────┤  提交者（需活跃） │◄─────┤ 提交者（需活跃）     │
+└──────┬───────┘     └────────────────┘              └────────────────────┘
+       │
+       ▼
+┌───────────────────────────────┐
+│     FreeBSD 核心小组（9人）    │
+│ 项目领导 / 权限管理 / 子项目协调 │
+└───────────────────────────────┘
+               ▲        ▲
+               │        │选举 / 任命
+               │        │
+       ┌───────┴────────┴────────┐
+       │                        ▼
+       │             ┌────────────────────┐
+       │             │   活跃提交者        │
+       │             └────────────────────┘
+       │                         ▲
+       │导师推荐                 │
+       ▼                         │
+┌──────────────────────┐        │
+│    新提交者候选人     │────────┘
+└──────────────────────┘
+
+社区支持（非法律实体）：
+────────────────────────────────────────────────────
+  - 全球用户与开发者网络协作（邮件列表 / Git / Bugzilla）
+  - 多语言社区（中文、日语、韩语、俄语等）
+────────────────────────────────────────────────────
+```
+
 ### 存储库
 
 FreeBSD 项目历史悠久，其使用的版本控制工具历经了 CVS、SVN、Git。目前使用 Git 进行协作开发。
