更新 1.2-about-bsd.md

--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -10,53 +10,54 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 
 ```
 ┌────────────────────┐
-                          │  FreeBSD 基金会     │
-                          │ 法律实体 / 捐赠 / 推广 │
-                          └────────┬───────────┘
-                                   │
-               商标持有            ▼
-                          ┌────────────────────┐
-                          │   FreeBSD 项目总览   │
-                          └────────┬───────────┘
-                                   │
-      ┌───────────────────────────┼────────────────────────────┐
-      │                           │                            │
-      ▼                           ▼                            ▼
-┌──────────────┐       ┌────────────────┐             ┌─────────────────┐
-│ freebsd src  │       │ freebsd ports  │             │  freebsd doc     │
-│ 源代码仓库   │       │ Ports 仓库     │             │ 文档仓库         │
-└──────┬───────┘       └──────┬─────────┘             └──────┬──────────┘
-       │                      │                                │
-       ▼                      ▼                                ▼
-┌──────────────┐     ┌────────────────┐              ┌────────────────────┐
-│  提交者（committers） │◄────┤  提交者（需活跃） │◄─────┤ 提交者（需活跃）     │
-└──────┬───────┘     └────────────────┘              └────────────────────┘
-       │
-       ▼
-┌───────────────────────────────┐
-│     FreeBSD 核心小组（9人）    │
-│ 项目领导 / 权限管理 / 子项目协调 │
-└───────────────────────────────┘
-               ▲        ▲
-               │        │选举 / 任命
-               │        │
-       ┌───────┴────────┴────────┐
-       │                        ▼
-       │             ┌────────────────────┐
-       │             │   活跃提交者        │
-       │             └────────────────────┘
-       │                         ▲
-       │导师推荐                 │
-       ▼                         │
-┌──────────────────────┐        │
-│    新提交者候选人     │────────┘
-└──────────────────────┘
+                             │   FreeBSD 基金会    │
+                             │ 法律实体 / 接收捐赠 │
+                             │ 商标持有 / 推广支持 │
+                             └─────────┬──────────┘
+                                       │
+                                       ▼
+                             ┌────────────────────┐
+                             │   FreeBSD 项目本体   │
+                             └─────────┬──────────┘
+                                       │
+        ┌──────────────────────────────┼──────────────────────────────┐
+        │                              │                              │
+        ▼                              ▼                              ▼
+┌────────────────┐           ┌────────────────┐           ┌────────────────┐
+│  freebsd src   │           │ freebsd ports  │           │  freebsd doc   │
+│   源代码仓库    │           │  Port 仓库      │           │   文档仓库     │
+└───────┬────────┘           └───────┬────────┘           └───────┬────────┘
+        │                            │                              │
+        ▼                            ▼                              ▼
+┌────────────────┐        ┌────────────────┐            ┌────────────────┐
+│  src 提交者     │        │ ports 提交者   │            │  doc 提交者    │
+│ (18 月内活跃)   │        │ (12 月内活跃)  │            │ (18 月内活跃)  │
+└────────┬───────┘        └────────┬───────┘            └────────┬───────┘
+         │                         │                               │
+         └────────────┬────────────┴────────────┬─────────────────┘
+                      ▼                         ▼
+           ┌────────────────────┐     ┌────────────────────┐
+           │   提交者候选人     │◄────│   已有提交者导师制 │
+           └────────────────────┘     └────────────────────┘
 
-社区支持（非法律实体）：
-────────────────────────────────────────────────────
-  - 全球用户与开发者网络协作（邮件列表 / Git / Bugzilla）
-  - 多语言社区（中文、日语、韩语、俄语等）
-────────────────────────────────────────────────────
+                             ▼
+                 ┌──────────────────────────┐
+                 │  FreeBSD 核心小组（9人） │
+                 │  项目最高协调与治理机构  │
+                 │ 管理权限 / 子项目 / CoC │
+                 └──────────┬──────────────┘
+                            │
+        ┌──────────────────┴──────────────────┐
+        ▼                                     ▼
+┌────────────────────┐             ┌────────────────────┐
+│ 活跃提交者有选举权 │             │ 可罢免核心小组成员 │
+└────────────────────┘             └────────────────────┘
+
+─────────────────────── 社区支持层 ───────────────────────
+  - 无法律实体，开放协作
+  - 全球用户和开发者网络（邮件列表、Git、Bugzilla）
+  - 多语言社区支持（中文、日文、韩文、俄文等）
+──────────────────────────────────────────────────────
 ```
 
 ### 存储库
