--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -9,55 +9,34 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 ## FreeBSD 开发模型
 
 ```
-┌────────────────────┐
-                             │   FreeBSD 基金会    │
-                             │ 法律实体 / 接收捐赠 │
-                             │ 商标持有 / 推广支持 │
-                             └─────────┬──────────┘
-                                       │
-                                       ▼
-                             ┌────────────────────┐
-                             │   FreeBSD 项目本体   │
-                             └─────────┬──────────┘
-                                       │
-        ┌──────────────────────────────┼──────────────────────────────┐
-        │                              │                              │
-        ▼                              ▼                              ▼
-┌────────────────┐           ┌────────────────┐           ┌────────────────┐
-│  freebsd src   │           │ freebsd ports  │           │  freebsd doc   │
-│   源代码仓库    │           │  Port 仓库      │           │   文档仓库     │
-└───────┬────────┘           └───────┬────────┘           └───────┬────────┘
-        │                            │                              │
-        ▼                            ▼                              ▼
-┌────────────────┐        ┌────────────────┐            ┌────────────────┐
-│  src 提交者     │        │ ports 提交者   │            │  doc 提交者    │
-│ (18 月内活跃)   │        │ (12 月内活跃)  │            │ (18 月内活跃)  │
-└────────┬───────┘        └────────┬───────┘            └────────┬───────┘
-         │                         │                               │
-         └────────────┬────────────┴────────────┬─────────────────┘
-                      ▼                         ▼
-           ┌────────────────────┐     ┌────────────────────┐
-           │   提交者候选人     │◄────│   已有提交者导师制 │
-           └────────────────────┘     └────────────────────┘
-
-                             ▼
-                 ┌──────────────────────────┐
-                 │  FreeBSD 核心小组（9人） │
-                 │  项目最高协调与治理机构  │
-                 │ 管理权限 / 子项目 / CoC │
-                 └──────────┬──────────────┘
-                            │
-        ┌──────────────────┴──────────────────┐
-        ▼                                     ▼
-┌────────────────────┐             ┌────────────────────┐
-│ 活跃提交者有选举权 │             │ 可罢免核心小组成员 │
-└────────────────────┘             └────────────────────┘
-
-─────────────────────── 社区支持层 ───────────────────────
-  - 无法律实体，开放协作
-  - 全球用户和开发者网络（邮件列表、Git、Bugzilla）
-  - 多语言社区支持（中文、日文、韩文、俄文等）
-──────────────────────────────────────────────────────
++---------------------------------------------------+
+|                FreeBSD Community                  |
+| (全球开发者/用户, 多语言子社区)                    |
++---------------------------------------------------+
+           |               |               |
+           |               |               |
++----------v----+ +--------v-------+ +-----v--------+
+| freebsd-src   | | freebsd-ports  | | freebsd-doc  |
+| (操作系统源码) | | (第三方软件移植)| | (文档项目)   |
++----------+----+ +--------+-------+ +-----+--------+
+           |               |               |
+           v               v               v
++---------------------------------------------------+
+|                  Committers                       |
+| (有仓库写入权限的开发者, 分领域维护活跃度要求)       |
++---------------------------------------------------+
+           ^               ^               ^
+           |               |               |
++----------+---------------+---------------+-+
+|            FreeBSD Core Team               |
+| (9人核心小组, 管理提交者/冲突/子团队等)      |
++--------------------------------------------+
+           ^
+           |
++----------+---------+
+| FreeBSD Foundation |
+| (法律/资金/商标管理)|
++--------------------+
 ```
 
 ### 存储库
