更新 1.2-about-bsd.md

--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -9,34 +9,31 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 ## FreeBSD 开发模型
 
 ```
-+---------------------------------------------------+
-|                FreeBSD Community                  |
-| (全球开发者/用户, 多语言子社区)                    |
-+---------------------------------------------------+
-           |               |               |
-           |               |               |
-+----------v----+ +--------v-------+ +-----v--------+
-| freebsd-src   | | freebsd-ports  | | freebsd-doc  |
-| (操作系统源码) | | (第三方软件移植)| | (文档项目)   |
-+----------+----+ +--------+-------+ +-----+--------+
-           |               |               |
-           v               v               v
-+---------------------------------------------------+
-|                  Committers                       |
-| (有仓库写入权限的开发者, 分领域维护活跃度要求)       |
-+---------------------------------------------------+
-           ^               ^               ^
-           |               |               |
-+----------+---------------+---------------+-+
-|            FreeBSD Core Team               |
-| (9人核心小组, 管理提交者/冲突/子团队等)      |
-+--------------------------------------------+
-           ^
-           |
-+----------+---------+
-| FreeBSD Foundation |
-| (法律/资金/商标管理)|
-+--------------------+
+                                +-----------------+
+                                | FreeBSD基金会   |
+                                | (非营利组织)    |
+                                +--------+--------+
+                                         | (支持、法律代表)
+                                         |
+                                         v
+                          +--------------+--------------+
+                          |       FreeBSD项目           |
+                          | (开发协作中心)             |
+                          +--------------+--------------+
+                                         |
+           +------------------------+----+----+------------------------+
+           | (包含)                  | (包含)  | (包含)                  |
+           v                         v         v                       v
++----------+------------+  +---------+---------+  +---------+------------+
+| 存储库                |  | FreeBSD核心小组    |  | 提交者               |
+| • src (源代码)        |  | (9人，最高决策机构) |  | (代码/文档/ports维护) |
+| • ports (软件移植)    |  +---------+---------+  +---------+------------+
+| • doc (文档)          |            | (管理)               | (写入)
++----------+------------+            | (权限控制)            |
+           ^                         |                      |
+           | (写入)                  +-----------+          |
+           |                                     |          |
+           +-------------------------------------+----------+
 ```
 
 ### 存储库
