--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -9,31 +9,33 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 ## FreeBSD 开发模型
 
 ```
-                                +-----------------+
-                                | FreeBSD 基金会   |
-                                | (非营利组织)    |
-                                +--------+--------+
-                                         | (支持、法律代表)
-                                         |
-                                         v
-                          +--------------+--------------+
-                          |       FreeBSD 项目           |
-                          | (开发协作中心)             |
-                          +--------------+--------------+
-                                         |
+                        +---------------------------------+
+                        |       FreeBSD 社区              |
+                        | (全球用户/开发者)                |
+                        | • Bug报告 • 代码贡献             |
+                        | • 本地化(中/俄/日/韩等)          |
+                        +-----------------+---------------+
+                                          |
+                                          | (贡献/反馈)
+                                          v
+                               +----------+-----------+
+                               |    FreeBSD 项目       |
+                               | (开发协作中心)         |
+                               +----------+-----------+
+                                          |
            +------------------------+----+----+------------------------+
-           | (包含)                  | (包含)  | (包含)                  |
-           v                         v         v                       v
+           | (法律支持)              | (管理)  | (开发贡献)              |
+           v                         |         v                       v
 +----------+------------+  +---------+---------+  +---------+------------+
-| 存储库                |  | FreeBSD 核心小组    |  | 提交者               |
-| • src (源代码)        |  | (9 人，最高决策机构) |  | (代码/文档/ports 维护) |
-| • ports (软件移植)    |  +---------+---------+  +---------+------------+
-| • doc (文档)          |            | (管理)               | (写入)
-+----------+------------+            | (权限控制)            |
-           ^                         |                      |
-           | (写入)                  +-----------+          |
-           |                                     |          |
-           +-------------------------------------+----------+
+| FreeBSD 基金会         |  | FreeBSD 核心小组    |  | 提交者               |
+| • 法律实体/商标持有    |  | (9 人，最高决策机构) |  | • 仓库写入权限        |
+| • 资金/会议支持        |  | • 权限管理         |  | • 导师机制产生        |
++----------+------------+  | • 团队监督         |  | • 需保持活跃提交      |
+                          +---------+---------+  +---------+------------+
+                                    | (选举)               ^ (从社区选出)
+                                    |                     |
+                                    +---------------------+
+                                    | (核心小组由提交者选举)
 ```
 
 ### 存储库
