更新 1.2-about-bsd.md

--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -32,10 +32,10 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 | • 资金/会议支持        |  | • 权限管理         |  | • 导师机制产生        |
 +----------+------------+  | • 团队监督         |  | • 需保持活跃提交      |
                           +---------+---------+  +---------+------------+
-                                    | (选举)               ^ (从社区选出)
+                                    | (选举/弹劾)               ^ (提交者从社区选出)
                                     |                     |
                                     +---------------------+
-                                    | (核心小组由提交者选举)
+                                    | (核心小组由提交者选举/弹劾)
 ```
 
 ### 存储库
