更新 1.2-about-bsd.md

--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -9,33 +9,34 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 ## FreeBSD 开发模型
 
 ```
-                        +---------------------------------+
-                        |       FreeBSD 社区              |
-                        | (全球用户/开发者)                |
-                        | • Bug 报告 • 代码贡献             |
-                        | • 本地化(中/俄/日/韩等)          |
-                        +-----------------+---------------+
-                                          |
-                                          | (贡献/反馈)
-                                          v
-                               +----------+-----------+
-                               |    FreeBSD 项目       |
-                               | (开发协作中心)         |
-                               +----------+-----------+
-                                          |
-           +------------------------+----+----+------------------------+
-           | (法律支持)              | (管理)  | (开发贡献)              |
-           v                         |         v                       v
-+----------+------------+  +---------+---------+  +---------+------------+
-| FreeBSD 基金会         |  | FreeBSD 核心小组    |  | 提交者               |
-| • 法律实体/商标持有    |  | (9 人，最高决策机构) |  | • 仓库写入权限        |
-| • 资金/会议支持        |  | • 权限管理         |  | • 导师机制产生        |
-+----------+------------+  | • 团队监督         |  | • 需保持活跃提交      |
-                          +---------+---------+  +---------+------------+
-                                    | (选举/弹劾)               ^ (提交者从社区选出)
-                                    |                     |
-                                    +---------------------+
-                                    | (核心小组由提交者选举/弹劾)
++----------------------------------------------+
+  |                 FreeBSD 社区                 |
+  |        （全球用户 / 开发者 / 贡献者）         |
+  |   • Bug 报告   • 代码 / 文档 / 本地化贡献     |
+  |   • 中 / 俄 / 日 / 韩等多语言本地化协作       |
+  +-------------------------+--------------------+
+                            |
+                            |    （贡献 / 反馈）
+                            v
+                 +----------+-----------+
+                 |       FreeBSD 项目    |
+                 |   （开发协作与治理中心） |
+                 +----------+-----------+
+                            |
+      +---------------------+----------------------+
+      |                     |                      |
+      |                     |                      |
+      v                     v                      v
++----------------+  +------------------+  +------------------------+
+| FreeBSD 基金会 |  |  FreeBSD 核心小组  |  |     提交者（Committers）    |
+| • 法律实体     |  | • 最高决策机构     |  | • 仓库写入权限               |
+| • 商标持有     |  | • 权限与团队监督   |  | • 经导师机制引导产生         |
+| • 资金会议支持 |  | • 成员共 9 人       |  | • 需保持活跃贡献             |
++----------------+  +------------------+  +------------------------+
+                           |
+                           |  （由提交者选举 / 弹劾产生）
+                           v
+                    <---- 核心小组成员 ---->
 ```
 
 ### 存储库
