--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -8,6 +8,36 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 
 ## FreeBSD 开发模型
 
+```             
+                       +---------------------------------+
+                        |       FreeBSD 社区              |
+                        | (全球用户/开发者)                |
+                        | • Bug 报告 • 代码贡献             |
+                        |                                 |
+                        +-----------------+---------------+
+                                          |
+                                          | (贡献/反馈)
+                                          v
+                               +----------+-----------+
+                               |    FreeBSD 项目       |
+                               | (开发协作中心)         |
+                               +----------+-----------+
+                                          |
+           +------------------------+----+----+------------------------+
+           | (法律支持)               | (管理)  | (开发贡献)              |
+           v                         |         v                       v
++----------+------------+  +---------+---------+  +---------+------------+
+| FreeBSD 基金会         |  | FreeBSD 核心小组    |  | 提交者               |
+| • 法律实体/商标持有      |  | (9 人，最高决策机构) |  | • 仓库写入权限          |
+| • 资金/会议支持        |  | • 权限管理         |  | • 导师机制产生        |
++----------+------------+  | • 团队监督         |  | • 需保持活跃提交      |
+                          +---------+---------+  +---------+------------+
+                                    | (选举/弹劾)               ^ (从社区选出)
+                                    |                     |
+                                    +---------------------+
+                                    | (核心小组由提交者选举)
+```
+
 ### 存储库
 
 FreeBSD 项目历史悠久，其使用的版本控制工具历经了 CVS、SVN、Git。目前使用 Git 进行协作开发。
