--- a/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
@@ -30,17 +30,19 @@ alpha 是 current 进入 release 的第一步。具体过程是 current --> alph
 current 相对稳定后（即 MFC 最短三天，MFC 即 `Merge From Head`，类似向后移植 `backporting`）会推送到 stable，但是不保证二者没有大的 bug。参见 [FreeBSD Release Engineering](https://docs.freebsd.org/en/articles/freebsd-releng/)。
 
 ```
-current (main) ────────────────┬───────────────────────┬───────────────────────> (永恒前进的 main 分支)
+current (main) ────────────────┬───────────────────────┬───────────────────────> (永恒前进的 15.0-CURRENT，直到发布 15.0-RELEASE 转成 16.0-CURRENT)
                                │                       │
                                │ MFC                   │ MFC
                                ↓                       ↓
-stable (ABI 稳定) ─────────────┴───────┬───────┬───────┴───────┬───────┬──────> (持续开发)
-                                       │       │               │       │
-发布周期 1:                             ├─> alpha1 → beta1 → rc1 → release1
-                                       │       │               │
-发布周期 2:                             │       └───────────────> alpha2 → beta2 → rc2 → release2
+stable (ABI 稳定) ─────────────┴───────┬───────────────┴───────┬───────────────> (持续开发的 stable 14，直到生命结束转成 stable 15)
                                        │                       │
-发布周期 3:                             └───────────────────────> alpha3 → beta3 → ...
+                                       ├──> 14.1-ALPHA         ├──> 14.2-ALPHA 
+                                       ↓                       ↓
+                                       ├──> 14.1-BETA          ├──> 14.2-BETA
+                                       ↓                       ↓
+                                       ├──> 14.1-RC            ├──> 14.2-RC
+                                       ↓                       ↓
+                                       └──> 14.1-RELEASE       └──> 14.2-RELEASE
 ```
 
 >**注意**
