--- a/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
@@ -32,7 +32,7 @@ current 相对稳定后（即 MFC 最短三天，MFC 即 `Merge From Head`，类
 ```
 current (main) ────────────────┬───────────────────────┬───────────────────────> (永恒前进的 15.0-CURRENT，直到发布 15.0-RELEASE 转成 16.0-CURRENT)
                                │                       │
-                               │ MFC                   │ MFC
+                               │ MFC（向后移植）        │ MFC（向后移植）
                                ↓                       ↓
 stable (ABI 稳定) ─────────────┴───────┬───────────────┴───────┬───────────────> (持续开发的 stable 14，直到生命结束转成 stable 15)
                                        │                       │
