--- a/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.1-install-pre.md
@@ -29,6 +29,22 @@ alpha 是 current 进入 release 的第一步。具体过程是 current --> alph
 
 current 相对稳定后（即 MFC 最短三天，MFC 即 `Merge From Head`，类似向后移植 `backporting`）会推送到 stable，但是不保证二者没有大的 bug。参见 [FreeBSD Release Engineering](https://docs.freebsd.org/en/articles/freebsd-releng/)。
 
+```
+current (main) ────────────────┬───────────────────────┬───────────────────────> (永恒前进的 15.0-CURRENT，直到发布 15.0-RELEASE 转成 16.0-CURRENT)
+                               │                       │
+                               │ MFC（向后移植）        │ MFC（向后移植）
+                               ↓                       ↓
+stable (ABI 稳定) ─────────────┴───────┬───────────────┴───────┬───────────────> (持续开发的 stable 14，直到生命结束转成 stable 15)
+                                       │                       │
+                                       ├──> 14.0-ALPHA         ├──> 14.1-ALPHA 
+                                       ↓                       ↓
+                                       ├──> 14.0-BETA          ├──> 14.1-BETA
+                                       ↓                       ↓
+                                       ├──> 14.0-RC            ├──> 14.1-RC
+                                       ↓                       ↓
+                                       └──> 14.0-RELEASE       └──> 14.1-RELEASE
+```
+
 >**注意**
 >
 >只有 alpha、rc、beta 和 release（[且是一级架构](https://www.freebsd.org/platforms/)）才能使用命令 `freebsd-update` 更新系统，其余版本系统均需要通过源代码编译的方式（或使用二进制的 pkgbase）更新系统。
