--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -8,34 +8,7 @@ FreeBSD 项目致力于提供一款真正的自由软件，实践自由软件的
 
 ## FreeBSD 开发模型
 
-```             
-                        +---------------------------------+
-                        |         FreeBSD 社区            |
-                        |       (全球用户/开发者)          |
-                        |    • Bug 报告 • 代码贡献         |
-                        +-----------------+---------------+
-                                          |
-                                          | (贡献/反馈)
-                                          v
-                               +----------+-----------+
-                               |    FreeBSD 项目      |
-                               +----------+-----------+
-                                          ^
-                                          |
-           +------------------------+----+----+--------------------------+
-           | (法律支持)               ^ (管理)  |       (开发贡献)         |
-           ^                         |         |                         ^
-+----------+------------+  +---------+---------+  +---------+------------+
-| FreeBSD 基金会         |  | FreeBSD 核心小组   | |     提交者            |
-| • 法律实体/商标持有     |  |  最高领导机构      |  |  • 仓库写入权限       |
-| • 资金/会议支持        |  | • 权限管理         |  | • 导师机制产生        |
-+----------+------------+  | • 团队监督         |  | • 需保持活跃提交      |
-                           +--------+---------+  +---------+------------+
-                                    ^ (提交者选举/弹劾)    |           ^ (提交者从社区选出)
-                                    |                     v
-                                    +---------------------+
-                                
-```
+![](../.gitbook/assets/model.svg)
 
 ### 存储库
 
