--- a/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
+++ b/di-1-zhang-zou-jin-freebsd/1.2-about-bsd.md
@@ -40,17 +40,7 @@ FreeBSD 核心小组选举每两年举行一次，可以连选连任。只有在
 
 FreeBSD 核心小组成员并不直接从中获取任何利益，同样也都是志愿者。
 
-## FreeBSD 简史
-
-UNIX -> Networking Release 1-> Networking Release 2 -> 386BSD -> FreeBSD 1.0
-
-386BSD -> 诉讼（1991-1994） -> 4.4 BSD-Lite -> FreeBSD 2.0
-
-
-![图片来源：<https://github.com/freebsd/freebsd-src/blob/main/share/misc/bsd-family-tree>，有删减](../.gitbook/assets/bsd-family-tree.png)
-
-
-### FreeBSD 时间线
+## FreeBSD 时间线
 
 - 1962 年 分时操作系统（Timesharing OS）
 
