--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -11,7 +11,7 @@
 ### 开始构建 Ubuntu 兼容层（基于 Ubuntu 22.04 LTS）
 
 ```sh
-# sysrc linux_enable="YES"
+# service linux enable
 # service linux start
 # service dbus enable #一般桌面已经配置
 # service dbus start #一般桌面已经配置
