--- a/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.4-jie-linux-jian-rong-ceng-ji-yu-archlinux-bootstrap.md
@@ -24,7 +24,7 @@
 ### 构建基本系统
 
 ```sh
-# sysrc linux_enable="YES"
+# service linux enable
 # service linux start
 # service dbus enable #一般桌面已经配置
 # service dbus start #一般桌面已经配置
