--- a/di-21-zhang-linux-jian-rong-ceng/di-21.8-jie-linux-jian-rong-ceng-ji-yu-rocky-linux.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.8-jie-linux-jian-rong-ceng-ji-yu-rocky-linux.md
@@ -101,7 +101,7 @@ if [ ! "$(sysrc -n dbus_enable)" = "YES" ]; then
 					;;
 				[Nn][Oo]|[Nn]|"")
 					echo "Enabling dbus service"
-					sysrc dbus_enable="YES"
+					service dbus enable
 					;;
 				*)
 					echo "Aborting."
@@ -111,7 +111,7 @@ if [ ! "$(sysrc -n dbus_enable)" = "YES" ]; then
 			;;
 		[Yy][Ee][Ss]|[Yy]|"")
 			echo "Enabling dbus service"
-			sysrc dbus_enable="YES"
+			service dbus enable
 			;;
 		*)
 			echo "Aborting."
