--- a/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
+++ b/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
@@ -1,1 +1,28 @@
 # 第 10.4 节 在 FreeBSD 上安装 VirtualBox
+
+VirtualBox 是由 Oracle 开发的一款虚拟化平台，其 VirtualBox Guest Additions（虚拟化增强工具）均以 GPL 发布；但 VirtualBox 扩展包（VirtualBox Extension Pack）需要遵守 PUEL（VirtualBox Extension Pack Personal Use and Educational License，VirtualBox 扩展包个人使用与教育许可）许可协议，扩展板主要提供了 USB 2.0 和 USB 3.0 支持、VirtualBox 远程桌面协议等功能。
+
+## 安装 VirtualBox
+
+VirtualBox 在 FreeBSD 上有多个版本，截止本文撰写时，有：`emulators/virtualbox-ose-legacy`（5.X）、`emulators/virtualbox-ose`（6.X）、`emulators/virtualbox-ose-70` 和 `emulators/virtualbox-ose-71`，其中都有 `nox-x11` 版本。
+
+本文安装最新的 `emulators/virtualbox-ose-71`。
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install virtualbox-ose-71
+```
+
+- 或者使用 Ports 安装：
+
+```sh
+# cd /usr/ports/emulators/virtualbox-ose-71/ 
+# make install clean
+```
+
+## 查看安装后说明
+
+```sh
+# pkg info -D virtualbox-ose-71
+```
