--- a/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
+++ b/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
@@ -8,17 +8,18 @@ VirtualBox 在 FreeBSD 上有多个版本，截止本文撰写时，有：`emula
 
 本文安装最新的 `emulators/virtualbox-ose-71`。
 
-- 使用 pkg 安装：
 
-```sh
-# pkg install virtualbox-ose-71
-```
-
-- 或者使用 Ports 安装：
+- 或者使用 Ports 安装（推荐）：
 
 ```sh
 # cd /usr/ports/emulators/virtualbox-ose-71/ 
 # make install clean
+```
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install virtualbox-ose-71
 ```
 
 ## 查看安装后说明
