--- a/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
+++ b/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
@@ -1,6 +1,6 @@
 # 第 10.4 节 在 FreeBSD 上安装 VirtualBox
 
-VirtualBox 是由 Oracle 开发的一款虚拟化平台，其 VirtualBox Guest Additions（虚拟化增强工具）均以 GPL 发布；但 VirtualBox 扩展包（VirtualBox Extension Pack）需要遵守 PUEL（VirtualBox Extension Pack Personal Use and Educational License，VirtualBox 扩展包个人使用与教育许可）许可协议，扩展板主要提供了 USB 2.0 和 USB 3.0 支持、VirtualBox 远程桌面协议等功能。
+VirtualBox 是由 Oracle 开发的一款虚拟化平台，其 VirtualBox Guest Additions（虚拟化增强工具）均以 GPL 发布；但 VirtualBox 扩展包（VirtualBox Extension Pack）需要遵守 PUEL（VirtualBox Extension Pack Personal Use and Educational License，VirtualBox 扩展包个人使用与教育许可）许可协议，支持 Oracle 云基础设施集成、宿主机摄像头、远程桌面协议（RDP）、PXE 启动（网络引导）、磁盘加密、NVMe 存储以及完整虚拟机加密。
 
 ## 安装 VirtualBox
 
