--- a/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
+++ b/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
@@ -218,3 +218,6 @@ devfs_system_ruleset="system"
 以非 root 用户运行 VirtualBox 时可能会报错 `NS_ERROR_FACTORY_NOT_REGISTERED`。此时请 `$ rm -rf /tmp/.vbox-*-ipc`。
 
 
+## 测试
+
+![](../.gitbook/assets/vb-vm-1.png)
