--- a/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
+++ b/di-10-zhang-xu-ni-hua/di-10.4-vitrualbox.md
@@ -1,6 +1,6 @@
 # 第 10.4 节 在 FreeBSD 上安装 VirtualBox
 
-VirtualBox 是由 Oracle 开发的一款虚拟化平台，其 VirtualBox Guest Additions（虚拟化增强工具）均以 GPL 发布；但闭源的 VirtualBox 扩展包（VirtualBox Extension Pack）尚不支持，其提供了 USB 2.0/3.0、NVMe 磁盘加密等功能。
+VirtualBox 是由 Oracle 开发的一款虚拟化平台，以 GPL 发布；但闭源的 VirtualBox 扩展包（VirtualBox Extension Pack）尚不支持，其提供了 USB 2.0/3.0、NVMe 磁盘加密等功能。
 
 ## 安装 VirtualBox
 
