--- a/di-3-zhang-freebsd-base/di-13.10-mu-lu.md
+++ b/di-3-zhang-freebsd-base/di-13.10-mu-lu.md
@@ -8,7 +8,7 @@
 参见 [hier(7)](https://man.freebsd.org/cgi/man.cgi?query=hier&sektion=7&manpath=freebsd-release-ports)
 
 ```sh
-/
+\
 ├── COPYRIGHT FreeBSD 版权信息
 ├── boot 操作系统引导过程中使用的程序和配置文件。
 │   ├── fonts 终端字体
@@ -164,7 +164,7 @@ dr-xr-xr-x   2 root    wheel   schg,uarch  2 Feb 21 10:26 empty
 
 
 ```sh
-PS C:\Users\ykla>  python C:\Users\ykla\Desktop\1.py C:\Users\ykla\Desktop\freebsd-src-main -l 1
+\freebsd-src-main\
 ├── .arcconfig Pharicator 是 FreeBSD 的代码审查工具，这是其配置文件
 ├── .arclint Lint 检查用
 ├── .cirrus-ci Cirrus CI 指定了安装 pkg 的脚本，CI 用
@@ -218,8 +218,7 @@ PS C:\Users\ykla>  python C:\Users\ykla\Desktop\1.py C:\Users\ykla\Desktop\freeb
 ![FreeBSD 内核源代码中的 contrib](../.gitbook/assets/sys-con.png)
 
 ```sh
-PS C:\Users\ykla> python C:\Users\ykla\Desktop\1.py  C:\Users\ykla\Desktop\freebsd-src-main\sys  -l 1
-C:\Users\ykla\Desktop\freebsd-src-main\sys
+\freebsd-src-main\sys
 ├── Makefile  用于定义项目的构建过程
 ├── README.md 阅读我，说明文件
 ├── amd64 x86-X64 架构支持
