chore: sync headers with SUMMARY.md

--- a/di-11-zhang-freebsd-install-more/di-11.6-jie-apple.md
+++ b/di-11-zhang-freebsd-install-more/di-11.6-jie-apple.md
@@ -1,4 +1,4 @@
-# 第 11.6 节 安装 FreeBSD——基于 Apple M1 & Parallels Desktop 20
+# 第 11.6 节 基于 Apple M1 & Parallels Desktop 20 安装 FreeBSD
 
 
 本文基于 Apple M1（macOS 14.7）、Parallels Desktop 20.1.3-55743。
